Fix issue with images and iframes not fitting smaller device widths

--- a/public/styles/article.css
+++ b/public/styles/article.css
@@ -66,7 +66,22 @@ p > a:visited:hover {
 }
 
 img {
+  max-width: 100%;
   float: var(--direction);
+}
+
+iframe {
+  max-width: 100%;
+  width: 560px;
+  height: 315px;
+  aspect-ratio: 3/2;
+}
+
+@media (max-width: 600px) {
+  iframe {
+    width: auto;
+    height: auto;
+  }
 }
 
 @media (max-width: 800px) {
